tests/sksl/errors/InVarWithInitializerExpression.glsl
### Compilation failed:

error: 1: 'in' variables cannot use initializer expressions
error: 3: global variable initializer must be a constant expression
2 errors
